Atualizadas imagens e nomes das páginas de Registo e Login para POP-8

--- a/plataforma/templates/plataforma/menu.html
+++ b/plataforma/templates/plataforma/menu.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Menu - SSD</title>
+    <title>Menu - POP-8</title>
     {# Seu link para o CSS externo. Adicione aqui os estilos gerais se preferir. #}
     <link rel="stylesheet" href="{% static 'plataforma/css/menu.css' %}">
     
