Renomeado SSD para POP-8 em todos os arquivos e pastas

--- a/plataforma/templates/plataforma/cadastro.html
+++ b/plataforma/templates/plataforma/cadastro.html
@@ -95,7 +95,7 @@
 <body>
     <a href="{{ config.link_apoio_whatsapp }}" class="link-apoio">Apoio</a>
     <div class="container">
-        <h2>Cadastro SSD</h2>
+        <h2>Cadastro POP-8</h2>
         {% if messages %}
             <ul class="messages">
                 {% for message in messages %}
