--- a/plataforma/templates/plataforma/login.html
+++ b/plataforma/templates/plataforma/login.html
@@ -85,7 +85,7 @@
 </head>
 <body>
     <div class="container">
-        <h2>Login SSD</h2>
+        <h2>Login POP-8</h2>
         {% if messages %}
             <ul class="messages">
                 {% for message in messages %}
