--- a/plataforma/templates/plataforma/menu.html
+++ b/plataforma/templates/plataforma/menu.html
@@ -403,7 +403,7 @@
 </head>
 <body>
     <div class="header">
-        <h1>SSD</h1>
+        <h1>POP-8</h1>
         <a href="{% url 'saida' %}" class="logout-btn">Sair</a>
     </div>
 
