--- a/plataforma/templates/plataforma/editar_senha.html
+++ b/plataforma/templates/plataforma/editar_senha.html
@@ -4,7 +4,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Mudar Senha - SSD</title>
+        <title>Mudar Senha - POP-8</title>
         <style>
             body {
                 font-family: Arial, sans-serif;
