--- a/plataforma/templates/plataforma/nivel.html
+++ b/plataforma/templates/plataforma/nivel.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Níveis - SSD</title>
+    <title>Níveis - POP-8</title>
     <style>
         body {
             background-color: #0c0b2d;
