--- a/plataforma/templates/plataforma/premios_subsidios.html
+++ b/plataforma/templates/plataforma/premios_subsidios.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>SSD - Prêmios de Subsídios</title>
+    <title>POP-8 - Prêmios de Subsídios</title>
     {% load static %} {# Adicionado para carregar arquivos estáticos #}
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap');
